--- a/lang/typescript/api/package.json
+++ b/lang/typescript/api/package.json
@@ -13,6 +13,11 @@
   "author": "Olegzandr VD",
   "license": "MIT",
   "dependencies": {
-    "@typeaware/doc-gen.cli": "https://raw.githubusercontent.com/typeaware/doc-gen/master/lang/typescript/cli/typeaware-doc-gen.cli-0.0.1001.tgz"
+    "@oresoftware/safe-stringify": "0.0.1001",
+    "chalk": "^2.4.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.12"
   }
 }
