--- a/lang/typescript/api/package.json
+++ b/lang/typescript/api/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "@typeaware/doc-gen.api",
+  "name": "@typeaware/docgen.api",
   "version": "0.0.1001",
   "description": "API Docs generator for TypeAware",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "typings": "dist/main.d.ts",
+  "types": "dist/main.d.ts",
   "scripts": {
     "test": "suman test"
   },
   "keywords": [
     "typeaware",
-    "type-aware"
+    "type-aware",
+    "doc-gen"
   ],
   "author": "Olegzandr VD",
   "license": "MIT",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
-    "@types/node": "^10.12.12"
+    "@types/node": "^10.12.12",
+    "express": "^4.16.4"
   }
 }
