--- a/lang/typescript/api/package.json
+++ b/lang/typescript/api/package.json
@@ -17,11 +17,14 @@
   "license": "MIT",
   "dependencies": {
     "@oresoftware/safe-stringify": "0.0.1001",
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "short-uuid": "^3.0.1",
+    "shortid": "^2.2.14"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/node": "^10.12.12",
+    "@types/shortid": "0.0.29",
     "express": "^4.16.4"
   }
 }
