--- a/lang/typescript/api/package.json
+++ b/lang/typescript/api/package.json
@@ -16,7 +16,7 @@
   "author": "Olegzandr VD",
   "license": "MIT",
   "dependencies": {
-    "@oresoftware/safe-stringify": "0.0.1001",
+    "@oresoftware/safe-stringify": "file:../../../../../oresoftware/safe-stringify",
     "@typeaware/api-app": "file:../../../apps/api-app",
     "chalk": "^2.4.1",
     "short-uuid": "^3.0.1",
